MOBI-290 Medicast upgrade fix for slight misalignment of vote tally boxes after voting reduced max-width on description to prevent wrapping on ipad
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@31222 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/mvc-mediacast/src/main/webapp/resources/css/contest.css
+++ b/samples/mvc-mediacast/src/main/webapp/resources/css/contest.css
@@ -127,7 +127,7 @@ html.ipad .mobi-list-item-default div.vote-tally{
 	font-weight: 200;
 	font-size: 15px;
 	text-overflow: ellipsis;
-	max-width: 140px;
+	max-width: 125px;
 	height: 50px;
 	margin: 0;
 	display: inline-block;
@@ -395,7 +395,7 @@ html.bberry .mobi-tabset-tabs > ul li {
     #left .mobi-list-item-default div.vote-tally{
         width: 50px;
         vertical-align:top;
-        float:none;
+        float:left;
     }
     #left .mobi-list > .mobi-list-item > .mobi-list-item-default input.vote {
 	   width: 40px;
